test/bad/undefined_type.veld
// BAD: undefined type in field → should suggest "User"
model User {
  id: string
  name: string
}

model Profile {
  user: Usr
}

